# hotinai

./: .gitignore  DESIGN.md  LICENSE  NOTICE  PRODUCT.md  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  ingest.yml  live-smoke.yml  pages.yml  publish.yml  refresh.yml
.impeccable/: config.json  design.json
.impeccable/live/: config.json
chain/: BUILD_SPEC_2026-07-21.md  FULL_RIGOR_ARCHITECTURE.md  LOOP_CHAIN_2026-07-20.md  LOOP_CHAIN_EVOLUTION_2026-07-20.md  resilient-dispatch.sh
chain/evidence/l1-adapters/: EXIT.md
chain/evidence/l2-engine/: EXIT.md
chain/evidence/l3-cliux/: EXIT.md
chain/evidence/l4-distdocs/: EXIT.md
docs/: CNAME  design-board.html  index.html
docs/data/: latest.json
scripts/: build_zipapp.sh
src/hotin/: __init__.py  __main__.py  board.py  cache.py  canonical.py  categories.py  cli.py  coerce.py  config.py  dedupe.py  engine.py  health.py  render.py  render_board.py  schedule.py  throttle.py
src/hotin/sources/: __init__.py  _hf.py  collections.py  frontier.py  github.py  hfmodels.py  hfpapers.py  hn.py  insiders.py  insiders_legacy.py  npm.py  reddit.py  smartmoney.py  smolai.py  trends.py  x.py  youtube.py
tests/: test_cache.py  test_canonical.py  test_categories.py  test_cli.py  test_config.py  test_engine.py  test_health.py  test_render.py  test_render_board.py  test_rising.py  test_schedule.py  test_source_collections.py  test_source_frontier.py  test_source_github.py  test_source_hfmodels.py  test_source_hfpapers.py  test_source_hn.py  test_source_insiders.py  test_source_insiders_legacy.py  test_source_npm.py  test_source_reddit.py  test_source_smartmoney.py  test_source_trends.py  test_source_x.py  test_source_youtube.py  test_throttle.py
tests/fixtures/: insider_rows_sample.json
